--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .class1 {
     
     height:33%;
-    border:1px dashed green;
+   
    
 }
 .class5 {
@@ -36,7 +36,7 @@
 } 
 .class4 {
     width: 100%;
-    border:1px dashed blue;
+   
     min-height:100px;
     margin:10px;
     padding:20px;
@@ -74,7 +74,7 @@
    
    height:98%;
    width:95%;
-  border:1px dashed red;
+ 
     margin:auto;
     padding:20px;
     text-align:center;
@@ -84,7 +84,7 @@
 .class0 {
     width:70%;
     
-    border:1px dashed green;
+    
     text-align:left;
     
     float:left;
@@ -92,7 +92,7 @@
 .class1 {
     width:20%;
    
-    border:1px dashed green;
+   
     float:right;
 }
 .class5 {
@@ -113,8 +113,8 @@
 }
 #id1 {
     width: 96%; 
-    height:100%;
-    border:1px dashed blue;
+    height:100%;s
+    
     margin:auto;
     padding:10px;
     text-align:center;
@@ -130,7 +130,7 @@
     grid-gap: 20px;
     grid-template-columns: auto auto ;
     grid-template-rows: auto auto auto auto; 
-    background: whitek;
+    background: white;
     padding: 20px;
   }
   
